tests/baselines/reference/nodeModulesImportAttributes(module=node16).errors.txt
error TS2468: Cannot find global value 'Promise'.
index.ts(1,35): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
otherc.cts(1,35): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
otherc.cts(2,15): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.


!!! error TS2468: Cannot find global value 'Promise'.
==== index.ts (1 errors) ====
    import json from "./package.json" with { type: "json" };
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
==== otherc.cts (2 errors) ====
    import json from "./package.json" with { type: "json" }; // should error, cjs mode imports don't support attributes
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    const json2 = import("./package.json", { with: { type: "json" } }); // should be fine
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }
    